# kpea

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
ci/: Dockerfile  build.sh  docker.sh  publish.sh  run.sh  test.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: gnu_cpio.rs
cpio-test/: Cargo.toml
cpio-test/src/: dev.rs  file.rs  lib.rs  mk.rs
random-dir/: Cargo.toml
random-dir/src/: dir.rs  lib.rs
src/: archive.rs  builder.rs  constants.rs  crc.rs  dev.rs  file_type.rs  header.rs  io.rs  lib.rs  metadata.rs  mk.rs  odc.rs  walk.rs
src/test/: file.rs
