[package]
name = "kpea"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.162"
normalize-path = "0.2.1"

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
cpio-test = { path = "cpio-test" }
similar-asserts = "1.6.0"
tempfile = "3.14.0"
walkdir = "2.5.0"
cpio = { package = "kpea", path = "." }

[workspace]
members = [".", "cli", "cpio-test"]
default-members = [".", "cli"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"
