[package]
name = "kpea"
version.workspace = true
edition = "2021"
license.workspace = true
homepage = "https://github.com/igankevich/kpea"
repository = "https://github.com/igankevich/kpea"
documentation = "https://docs.rs/kpea"
readme = "README.md"
description = "CPIO archive reader/writer library. Supports New ASCII and Old character formats. Fuzz-tested against GNU cpio."
keywords = ["cpio", "archive"]
categories = ["encoding", "filesystem"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
libc = "0.2.162"
normalize-path = "0.2.1"

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"
cpio-test = { path = "cpio-test" }
similar-asserts = "1.6.0"
tempfile = "3.14.0"
walkdir = "2.5.0"

[workspace]
members = [".", "cli", "cpio-test"]
default-members = [".", "cli"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
missing_docs = "warn"

[workspace.package]
license = "MIT"
version = "0.2.0"
