[package]
name = "cpio-cli"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "cpio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
cpio = { package = "kpea", path = ".." }

[dev-dependencies]
arbtest = "0.3.2"
random-dir.workspace = true
similar-asserts = "1.7.0"
tempfile = "3.24.0"
test_bin = "0.5.0"
walkdir = "2.5.0"
