[package]
name = "kpea-cli"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "kpea"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
cpio = { workspace = true }

[dev-dependencies]
arbtest = "0.3.2"
random-dir.workspace = true
similar-asserts = "1.7.0"
tempfile = "3.24.0"
test_bin = "0.5.0"
walkdir = "2.5.0"
